--- a/Css/style.css
+++ b/Css/style.css
@@ -1,6 +1,40 @@
 *{
     background-color: #c3e7ec;
 }
+.oneimg{
+    width: 200px;
+    float: right;
+    height: 330px;
+}
+
+.twoimg{
+    width: 50px;
+    float: left;
+    height: 50px;
+}
+
+.threeimg{
+    width: 50px;
+    float: left;
+    height: 50px;
+}
+
+.fourimg{
+    width: 50px;
+    float: left;
+    height: 50px;
+}
+
+.fiveimg{
+    width: 50px;
+    float: left;
+    height: 50px;
+}
+.siximg{
+    width: 50px;
+    float: left;
+    height: 50px;
+}
 .h1{
     text-align: center;
 }
@@ -25,4 +59,5 @@ img{
 .p{
     text-align: center;
 }
+
 
